tests/snapshots/render__history-empty.snap
---
source: tests/render.rs
expression: modal_box(&m).backend()
---
"┌ history ─────────────────────────────┐"
"│ nothing said yet                     │"
"│ [close esc]                          │"
"└──────────────────────────────────────┘"
