tests/snapshots/render__leader-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││line 07     ~~~~~~~                                  │"
"│                       ││line 08     ~~~~~~~~                                 │"
"│^] then:               ││line 09     ~~~~~~~~~                                │"
"│n summon    c cast     ││line 10     ~~~~~~~~~~                               │"
"│b banish    r recall   ││line 11     ~~~~~~~~~~~                              │"
"│t timetable x close    ││line 12     ~~~~~~~~~~~~                             │"
"│u renew     j next     ││line 13     ~~~~~~~~~~~~~                            │"
"│k previous  a needs you││line 14     ~~~~~~~~~~~~~~                           │"
"│[ scroll    / search   ││line 15     ~~~~~~~~~~~~~~~                          │"
"│y copy last 1-9 slot   ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│m mouse     w awake    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│d detach    q quit     ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│h history   ? help     ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│^] send ^]             ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───── esc cancels ─────┘└─────────────────────────────────────────────────────┘"
